# data-extraction

./: .gitignore  LICENSE  Makefile  README.md  extract.py  main.py  pyproject.toml
data/csv/: 01 Introduction.csv  02 Components.csv  03 NV_sum_39 (per 100g EP).csv  04 NV_stat_39 (per 100g EP).csv  05 NV_sum_57 (per 100g EP).csv  06 NV_stat_57 (per 100g EP).csv  07 Yield factors, sing_ing.csv  08 Retention factors.csv  09 Mixed dishes.csv  10 FoodEx2 codes.csv  11 2012 vs 2019 names and codes.csv  12 Data sources with BiblioID.csv
data/json/food_group/: beverages_-_boissons.json  cereals_and_their_products_-_crales_et_produits_drivs.json  eggs_and_their_products_-_ufs_et_produits_drivs.json  fats_and_oils_-_graisses_et_huiles.json  fish_and_its_products_-_poisson_et_produits_drivs.json  fruits_and_their_products_-_fruits_et_produits_drivs.json  legumes_and_their_products_-_lgumineuses_et_produits_drivs.json  meat_poultry_and_their_products_-_viande_volaille_et_produits_drivs.json  milk_and_its_products_-_lait_et_produits_drivs.json  miscellaneous_-_divers.json  non-african_data.json  soups_and_sauces_-_soupes_et_sauces.json  (+3 more)
data/xlsx/: WestAfricanFCT_Userdatabase_2012_xls.xls
docs/: pipeline.md  reproducibility.md
helper/: utils.py
scripts/: 01_export_excel_to_csv.py  02_extract_structured_food_data.py  03_split_by_food_group.py
src/data_extraction/: __init__.py  cli.py  config.py  generic_pipeline.py  pipeline.py  template.py
templates/: example_template.csv  example_template.json
tests/: test_generic_pipeline.py  test_parsing_helpers.py
(+14 files in other folders)
